Android OOP-D: Tear down display when going invisible

When Android goes invisible in OOP-D, it wasn't tearing down the
display, which can lead to GL issues as we continue to use GL
after the window (used to create the GL surface) is destroyed.

In order to tear down the display for Viz, we need to invalidate
our root frame sink ID. This change refactors things so that we
always invalidate the root frame sink ID on going invisible, and
re-register it on becoming visible. This allows both viz/non-viz
to share the same logic.

As registering/unregistering isn't doing much in non-viz case,
this doesn't add significant overhead there.

Bug: 863049
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel
Change-Id: I1589e402185fd9e2cdb007d3d8cd739f303ad48a
Reviewed-on: https://chromium-review.googlesource.com/1184376
Reviewed-by: Khushal <khushalsagar@chromium.org>
Reviewed-by: Tom Sepez <tsepez@chromium.org>
Commit-Queue: Eric Karl <ericrk@chromium.org>
Cr-Commit-Position: refs/heads/master@{#585664}
Former-commit-id: 7c6485d8afdd53f95b44ebc545351cafb835ecaa